# autocrit

./: .flake8  .pre-commit-config.yaml  README.md  preference.py  pyproject.toml  setup.cfg
autocrit/inference/: .gitignore  README.md
autocrit/inference/triton/: client.py
examples/hh/: rm_config.yaml  sft_config.yaml  train_rm.sh  train_sft.sh
examples/self_critiquing/data_handlers/: base_dataset.py  critique_dataset.py  helpfulness_dataset.py
tclx/data/: datasets.py
tclx/eval/: inference.py
tclx/model/: reward_models.py
tclx/train/: finetune_base.py  finetune_scalar_rm.py
tclx/utils/: logger.py  utils.py
